# Uitnodigingsregel

./: .env.example  .gitignore  CLAUDE.md  Makefile  Model_analysis.qmd  PAINPOINTS_OVERVIEW.md  README.md  ROADMAP.md  Variabelen_Definities_v4.xlsx  config.yaml  main.py  mkdocs.yml  pyproject.toml
.claude/skills/check-style/: SKILL.md
.claude/skills/init-repo/: SKILL.md
.claude/skills/migrate-cookiecutter/: SKILL.md
.claude/skills/write-issue/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: config.toml  main.py  styles.py
docs/: aan-de-slag.md  index.md
docs/api/: index.md
module/: plot.py
module/modeling/: train.py
scoop/: uitnodigingsregel.json
snapshots/: README.md  compare.py  update.py
snapshots/fixtures/: snapshot_rf.csv  snapshot_svm.csv
snapshots/fixtures/models/: lasso_regression.joblib  random_forest_regressor.joblib  support_vector_machine.joblib
src/uitnodigingsregel/: __init__.py  analyze.py  cli.py  dataset.py  evaluate.py  features.py  visualize.py
src/uitnodigingsregel/app/: __init__.py  main.py  styles.py
src/uitnodigingsregel/metadata/: config.yaml
src/uitnodigingsregel/modeling/: predict.py  train.py
tests/: test_dataset.py  test_evaluate.py  test_features.py  test_snapshot_model_output.py  update_snapshots.py
tests/fixtures/: snapshot_lasso.csv
tests/fixtures/models/: support_vector_machine.joblib
