[project]
name = "uitnodigingsregel"
version = "0.1.0"
description = "Dropout prediction models for student intervention planning"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Steven Ramondt"},
]
dependencies = [
    "httpx>=0.28.1",
    "joblib>=1.4.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.8.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.0",
    "streamlit>=1.40",
    "student_signal",
    "xlsxwriter>=3.2.2",
]

[project.scripts]
uitnodigingsregel = "uitnodigingsregel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uitnodigingsregel"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.uv]
cache-dir = "./.uv_cache"

[tool.uv.sources]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N803", "N806"]

[tool.ruff.lint.per-file-ignores]
"src/uitnodigingsregel/app/styles.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "pymdown-extensions>=10.0",
]
